# restaurant-template

./: Cargo.toml  README.md  Trunk.toml  index.html  manifest.webmanifest  package.json  service_worker.js  tailwind.config.js
src/: main.rs
src/components/: mod.rs
src/components/atoms/: mod.rs
src/components/atoms/button/: mod.rs
src/components/atoms/clock_icon/: mod.rs
src/components/atoms/label/: mod.rs
src/components/atoms/location_icon/: mod.rs
src/components/atoms/logo/: mod.rs
src/components/atoms/svg_icons/: mod.rs
src/components/atoms/text_link/: mod.rs
src/components/atoms/theme_button/: mod.rs
src/components/molecules/: mod.rs
src/components/molecules/menu_item/: mod.rs  props.rs
src/components/molecules/testimonial/: mod.rs  props.rs
src/components/organisms/: mod.rs
src/components/organisms/carousel/: mod.rs  props.rs
src/components/organisms/client_review_card/: utils.rs
src/components/organisms/footer/: mod.rs
src/components/organisms/header/: mod.rs
src/components/organisms/side_nav/: mod.rs
src/components/pages/: mod.rs
src/components/pages/about/: mod.rs
src/components/pages/contact/: mod.rs
src/components/pages/home/: mod.rs
src/components/pages/menu/: mod.rs
src/components/pages/page/: mod.rs
src/components/templates/page/: mod.rs
styles/: tailwind.css
