[package]
name = "restaurant_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
wasm-bindgen = "0.2"
gloo = "0.8.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window"
]
